[package]
name = "rev-tongyi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.9", features = ["cookies", "json", "stream"]}
serde_json = "1.0.133"
tokio = {version = "1.42.0",features = ["full"]}
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
serde = { version = "1.0.216", features = ["derive"] } 
